--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,7 @@
-Flask==2.0.2
-scikit-learn==0.24.2
-pandas==1.3.5
-joblib==1.3.2
-gunicorn==20.1.0
-numpy==1.21.6
-scipy==1.7.3
-matplotlib==3.4.3
-seaborn==0.11.2
-statsmodels==0.13.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-easyocr==1.7.2
-idna==3.10
-imageio==2.31.2
-joblib==1.3.2
-networkx==2.6.3
-ninja==1.11.1.3
-numpy==1.21.6
-opencv-python-headless==4.10.0.84
-packaging==24.0
-pandas==1.3.5
-Pillow==9.5.0
-pip==24.0
-pyclipper==1.3.0.post6
-pypickle==1.1.0
-pytesseract==0.3.10
-python-bidi==0.6.2
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyWavelets==1.3.0
-PyYAML==6.0.1
-requests==2.31.0
-scikit-image==0.19.3
-scikit-learn==0.24.2
-scipy==1.7.3
-setuptools==40.8.0
-shapely==2.0.6
-six==1.17.0
-threadpoolctl==3.1.0
-tifffile==2021.11.2
-torch==1.13.1
-torchvision==0.14.1
-typing_extensions==4.7.1
-urllib3==2.0.7
+blinker==1.7.0
+click==8.1.7
+Flask==3.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+Werkzeug==3.0.1
