--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,8 +18,8 @@ jobs:
     - name: executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
+        host: ${{ vars.HOST }}
+        username: ${{ vars.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: /docker/deploy_production.sh
