--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,5 +23,6 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: |
+          chmod +x ${{ github.workspace }}/docker/deploy_production.sh
           echo ${{ github.workspace }}
           bash /docker/deploy_production.sh
