--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,6 +23,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: |
+          pwd
           chmod +x deploy_production.sh
           echo $GITHUB_ACTION_PATH
           bash deploy_production.sh
