--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,5 +23,5 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: |
-         chmod +x /docker/deploy_production.sh
+          sudo chmod +x /docker/deploy_production.sh
          /docker/deploy_production.sh
