--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,5 +23,6 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: |
+          echo "change"
           sudo chmod +x /docker/deploy_production.sh
           /docker/deploy_production.sh
