--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,9 +1,9 @@
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
-
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch: 
 name: flask web app
 
 jobs:
