--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,8 +1,8 @@
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
   workflow_dispatch: 
 name: flask web app
 
